--- a/03_contact.html
+++ b/03_contact.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Team.
-permalink: /team/
+title: Contact.
+permalink: /contact/
 ---
 
 <div class='page-header'>
-  <h1>Team</h1>
+  <h1>Contact.</h1>
 </div>
 
 <div class='info-group'>
