--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@ layout: default
 <div class='info-group'>
   <div class='info-item'>
     <h4>One-of-a-kind network</h4>
-    <h5>Director</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu mi sagittis, bibendum enim nec, vestibulum orci. Donec magna magna, auctor a quam in, venenatis placerat elit. In id accumsan purus. Nulla congue faucibus ligula a mattis. Etiam commodo ipsum ut leo congue, sed iaculis arcu dictum. Ut scelerisque nisi neque. Vestibulum tristique sollicitudin enim ut rhoncus.</p>
+    <p>Backed by a network of strong partners, with a pedigree of successful start-up engagements, SeedPlus offers an unparalleled support network.</p>
   </div>
   <div class='info-item'>
     <h4>With you every day</h4>
-    <p>Fusce ultrices interdum vehicula. Sed in purus ac elit mattis elementum sed at nulla. Donec mattis mi quis arcu vestibulum volutpat. Nulla efficitur arcu mauris, sed tincidunt ante placerat tempus. Suspendisse orci ligula, bibendum quis sagittis placerat, dapibus eget lectus. Nulla eget viverra dui. In eget urna a sem mollis commodo. Sed placerat orci vel nibh aliquet consectetur. Aliquam vitae laoreet ipsum.</p>
+    <p>We create sustainable businesses together with founders. Our operating partners come from the industry, and that experience is shared through hands-on work - day in and day out, week in and week out.</p>
   </div>
   <div class='info-item'>
     <h4>Bigger checks</h4>
-    <p>Integer malesuada enim ut mi convallis, at dignissim lectus viverra. Mauris facilisis aliquam eleifend. Donec sodales magna at erat tempor ornare. Ut ultrices nunc sit amet erat porttitor consequat. Phasellus lacinia enim ac risus dapibus, in mollis ligula sagittis. Nunc nec eros et augue dignissim tempor ut ut elit. Sed vel suscipit mi. </p>
+    <p>SeedPlus invests­ to take you to your product­-market fit. As you keep growing, we grow along with you to a strong Series A.</p>
   </div>
 </div>
