--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <div class='page-header'>
-  <h1>A new <wbr />kind of <wbr />seed firm.</h1>
+  <h1>A new<br/>kind of<br/>seed firm.</h1>
 </div>
 <div class='info-group'>
   <div class='info-item'>
