Remove soft hyphen that caused rendering weirdness.

--- a/01_about.html
+++ b/01_about.html
@@ -12,7 +12,7 @@ redirect_from: /about-us/
 <div class='info-group'>
   <div class='info-item'>
     <h4>What’s the deal?</h4>
-    <p>We are a Singapore-­based seed-stage venture firm that invests S$500k to ­1M in early stage companies on market terms. Once the investment is in place, we’ll help you to grow to profit or the next round of funding through our network and our full­-time operating partners.</p>
+    <p>We are a Singapore-­based seed-stage venture firm that invests S$500k to 1M in early stage companies on market terms. Once the investment is in place, we’ll help you to grow to profit or the next round of funding through our network and our full­-time operating partners.</p>
   </div>
   <div class='info-item'>
     <h4>So you’re a bunch of mentors?</h4>
