Turn off scrollwheel zooming on embedded Google map.

--- a/03_contact.html
+++ b/03_contact.html
@@ -17,6 +17,7 @@ permalink: /contact/
       streetViewControl: false,
       rotateControl: false,
       fullscreenControl: false,
+      scrollwheel: false,
       styles: [
         {
           "stylers": [
