--- a/02_team.html
+++ b/02_team.html
@@ -23,6 +23,20 @@ permalink: /team/
   </div>
 </div>
 <div class='info-group'>
+  <div class='bio-portrait' style='background-image: url("/images/chirayu.jpg")'></div>
+  <div class='info-item'>
+    <h4>Chirayu Wadke</h4>
+    <h5>Partner, IoT and connected devices</h5>
+    <p>Chirayu is an experienced technology executive, working on IOT and mobile payments platforms at Google, Mountain View for the last 5 years. He headed business development for the smart router designed by Google, and before that lead business development for the NFC mobile wallet ecosystem back in 2012 with Google Wallet/Android Pay.</p>
+    <p>Prior to Google, he started Verizon Wireless' corporate development presence in Asia Pacific and India and was one of the first few people on Softcard (JV between Verizon, T-Mobile and AT&amp;T).</p>
+    <p>Between large company stints, he has also tried his hand at founding a startup, which went on to raise a few million dollars in venture funding. Chirayu has been an advisor to Jungle ventures since its inception in 2012.</p>
+    <div class='bio-contact'>
+      <a href="https://twitter.com/chirayuwadke">{% include icon-twitter.svg %}</a>
+      <a href="https://www.linkedin.com/in/cwadke">{% include icon-linkedin.svg %}</a>
+    </div>
+  </div>
+</div>
+<div class='info-group'>
   <div class='bio-portrait' style='background-image: url("/images/tiang.jpg")'></div>
   <div class='info-item'>
     <h4>Tiang Lim Foo</h4>
