Add open analyst position to the team page

--- a/02_team.html
+++ b/02_team.html
@@ -9,6 +9,16 @@ permalink: /team/
 </div>
 
 <div class='info-group'>
+  <div class='info-sidebar'>
+    <h2>Hiring.</h2>
+  </div>
+  <div class='info-item'>
+    <h4>Open position</h4>
+    <h5>Senior analyst</h5>
+    <p>We're <a href='/files/senioranalyst_0717.pdf'>looking for an addition</a> to the SeedPlus investment team. Want to help us both screen and evaluate investments, and engage with our portfolio founders on business planning? <a href='mailto:hello@seedplus.com'>Send us your resume</a>.</p>
+  </div>
+</div>
+<div class='info-group'>
   <div class='bio-portrait' style='background-image: url("/images/michael.jpg")'></div>
   <div class='info-item'>
     <h4>Michael Smith Jr</h4>
