Add portfolio page

--- a/03_team.html
+++ b/03_team.html
@@ -9,7 +9,7 @@ permalink: /team/
 </div>
 
 <div class='info-group'>
-  <div class='bio-portrait' style='background-image: url("/images/michael.jpg")'></div>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/michael.jpg"); background-position: 42% 10%'></div>
   <div class='info-item'>
     <h4>Michael Smith Jr</h4>
     <h5>Partner</h5>
@@ -23,7 +23,7 @@ permalink: /team/
   </div>
 </div>
 <div class='info-group'>
-  <div class='bio-portrait' style='background-image: url("/images/chirayu.jpg")'></div>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/chirayu.jpg")'></div>
   <div class='info-item'>
     <h4>Chirayu Wadke</h4>
     <h5>Partner, IoT and connected devices</h5>
@@ -37,7 +37,7 @@ permalink: /team/
   </div>
 </div>
 <div class='info-group'>
-  <div class='bio-portrait' style='background-image: url("/images/tiang.jpg")'></div>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/tiang.jpg")'></div>
   <div class='info-item'>
     <h4>Tiang Lim Foo</h4>
     <h5>Operating Partner</h5>
@@ -51,7 +51,7 @@ permalink: /team/
   </div>
 </div>
 <div class='info-group'>
-  <div class='bio-portrait' style='background-image: url("/images/gabriel.jpg")'></div>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/gabriel.jpg")'></div>
   <div class='info-item'>
     <h4>Gabriel Lundberg</h4>
     <h5>Operating Partner</h5>
