--- a/02_team.html
+++ b/02_team.html
@@ -17,8 +17,8 @@ permalink: /team/
     <p>As Chief Technology Officer at HOOQ he was key in driving product and technology decisions that powered the premium online video content service to customers across Asia. At Yahoo!, Michael served as Director of Global Tech Initiatives. He managed the Asian developer network and oversaw the acquisitions of start-ups and partnerships with companies across Southeast Asia. Michael also spearheaded the acquisition of Koprol which formed the foundation of Yahoo!’s Indonesian engineering site.</p>
     <p>A 44-year-old native from the Bay area with a degree in Computer Science from Sierra College in California, USA, Michael has found his home in East Asia: He has worked in Singapore, Hong Kong and Thailand, and been actively involved in the Asian start-up community over the past ten years.</p>
     <div class='bio-contact'>
-      <a href="https://twitter.com/dreampipe">{% include icon-twitter.svg %}</a>
-      <a href="https://www.linkedin.com/in/dreampipe">{% include icon-linkedin.svg %}</a>
+      <a href="https://twitter.com/dreampipe" class='outbound'>{% include icon-twitter.svg %}</a>
+      <a href="https://www.linkedin.com/in/dreampipe" class='outbound'>{% include icon-linkedin.svg %}</a>
     </div>
   </div>
 </div>
@@ -31,8 +31,8 @@ permalink: /team/
     <p>Prior to Google, he started Verizon Wireless' corporate development presence in Asia Pacific and India and was one of the first few people on Softcard (JV between Verizon, T-Mobile and AT&amp;T).</p>
     <p>Between large company stints, he has also tried his hand at founding a startup, which went on to raise a few million dollars in venture funding. Chirayu has been an advisor to Jungle ventures since its inception in 2012.</p>
     <div class='bio-contact'>
-      <a href="https://twitter.com/chirayuwadke">{% include icon-twitter.svg %}</a>
-      <a href="https://www.linkedin.com/in/cwadke">{% include icon-linkedin.svg %}</a>
+      <a href="https://twitter.com/chirayuwadke" class='outbound'>{% include icon-twitter.svg %}</a>
+      <a href="https://www.linkedin.com/in/cwadke" class='outbound'>{% include icon-linkedin.svg %}</a>
     </div>
   </div>
 </div>
@@ -45,8 +45,8 @@ permalink: /team/
     <p>Prior to launching Evernote, he served as VP of Product at MoVend, a Singtel Innov8 funded startup focused on mobile application development, content distribution and app monetization. Overseeing developer relations, feature planning and product marketing, Tiang identified key publishing and payment partners for the MoVend commerce platform’s growth.</p>
     <p>With a Bachelor’s in Mechanical Engineering from the renowned National University of Singapore (NUS), he started his career as a medical device engineer designing and implementing manufacturing processes for lean production of cardiovascular stents and catheters in Second Source Medial, a medical device contract manufacturer in San Jose, California and brings this keen understanding of product development to your team.</p>
     <div class='bio-contact'>
-      <a href="https://twitter.com/tianglim">{% include icon-twitter.svg %}</a>
-      <a href="https://www.linkedin.com/in/tianglimfoo">{% include icon-linkedin.svg %}</a>
+      <a href="https://twitter.com/tianglim" class='outbound'>{% include icon-twitter.svg %}</a>
+      <a href="https://www.linkedin.com/in/tianglimfoo" class='outbound'>{% include icon-linkedin.svg %}</a>
     </div>
   </div>
 </div>
@@ -59,8 +59,8 @@ permalink: /team/
     <p>Transitioning from engineering to product management, Gabriel helped expand the digital music service's offering into the experience we know today. Responsible for the music search system, he is equally comfortable around big data and scalability issues as around user experience and layout engines. Gabriel also brought Spotify to new mobile platforms, launched a download store and eventually ended up at Spotify Singapore, where he tailored the music streaming service to Southeast Asia preferences.</p>
     <p>Hailing from Sweden, Gabriel holds a Bachelor of Science in Engineering Physics from Chalmers University of Technology and and also pursued graduate studies in computer science and machine learning.</p>
     <div class='bio-contact'>
-      <a href="https://twitter.com/snailyone">{% include icon-twitter.svg %}</a>
-      <a href="https://www.linkedin.com/in/gabriellundberg">{% include icon-linkedin.svg %}</a>
+      <a href="https://twitter.com/snailyone" class='outbound'>{% include icon-twitter.svg %}</a>
+      <a href="https://www.linkedin.com/in/gabriellundberg" class='outbound'>{% include icon-linkedin.svg %}</a>
     </div>
   </div>
 </div>
