Name change from IIPL to SGInnovate

--- a/01_about.html
+++ b/01_about.html
@@ -20,7 +20,7 @@ redirect_from: /about-us/
   </div>
   <div class='info-item'>
     <h4>Who else is on board?</h4>
-    <p>SeedPlus is a network of networks. Between Jungle Ventures, PwC, Google, Accel Partners and Infocomm Investments, there are few questions we can’t answer and little support we can’t give.</p>
+    <p>SeedPlus is a network of networks. Between Jungle Ventures, PwC, Google, Accel Partners and SGInnovate, there are few questions we can’t answer and little support we can’t give.</p>
   </div>
 </div>
 <div class='info-group'>
