Add Der Shing to team

--- a/03_team.html
+++ b/03_team.html
@@ -64,3 +64,17 @@ permalink: /team/
     </div>
   </div>
 </div>
+<div class='info-group'>
+  <div class='bio-image bio-portrait' style='background-image: url("/images/dershing.jpg")'></div>
+  <div class='info-item'>
+    <h4>Der Shing Lim</h4>
+    <h5>Venture Partner</h5>
+    <p>Since 2009, Der Shing has been an active angel investor in technology startups. His goal is to help these businesses grow to their full potential through sharing of his experiences. In 2012, Der Shing joined Jungle Ventures as a Venture Partner and has invested directly in 17 startups and indirectly in hundreds more via 5 ASEAN VCs. </p>
+    <p>Der Shing started out his career in 2000, growing JobsCentral from a 2 man startup in 2000 to over 150 full time headcount regionally in SG,MY and ID. Without any external funding, the team grew revenue and profit annually over a 10 year period. In 2011, JobsCentral Group was acquired by US based CareerBuilder. Der Shing’s last appointment which ended June 2014 was as Regional MD in CareerBuilder. He is now a full time investor.</p>
+    <p>Der Shing is a board member for ITE, ACE and SPRING Singapore. He was also part of the main committee for the Committee on the Future Economy and co-led the startup workgroup. Der Shing also volunteers in the skillsfuture subcommittee of SWCDC.</p>
+    <p>Der Shing graduated from the University of Michigan in 1999.</p>
+    <div class='bio-contact'>
+      <a href="https://www.linkedin.com/in/dershing/" class='outbound'>{% include icon-linkedin.svg %}</a>
+    </div>
+  </div>
+</div>
