Add CoveIoT and Qopper to portfolio

--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -9,20 +9,20 @@ permalink: /portfolio/
 </div>
 
 <div class='info-group'>
-  <a href='https://www.moglix.com/' class='bio-image' style='background-image: url("/images/portfolio/moglix.svg")'></a>
-  <div class='info-item'>
-    <h4>Moglix</h4>
-    <h5>SaaS-enabled marketplace for industrial goods</h5>
-    <p>Headed by Rahul Garg, who left his job at Google to start the Alibaba of south and south-east Asia, Moglix is a growing powerhouse in industrial MRO goods.</p>
-    <p>Since raising seed capital from SeedPlus and Accel, Moglix has closed both the A and B round through the SeedPlus network within 18 months.</p>
-  </div>
-</div>
-<div class='info-group'>
   <a href='https://appknox.com/' class='bio-image' style='background-image: url("/images/portfolio/appknox.svg")'></a>
   <div class='info-item'>
     <h4>Appknox</h4>
     <h5>Mobile app security as a service</h5>
     <p>Appknox is a mobile app security solution that uses the combined power of automation and manual testing to help businesses and developers detect and resolve security issues without sharing any source code.  Appknox performs over 120 inspections using a set of real devices mirrored onto the web that users interact with as inspections run in the background. A detailed actionable report helps developers fix security issues easily even without having any security knowledge.</p>
+  </div>
+</div>
+<div class='info-group'>
+  <a href='http://coveiot.com/' class='bio-image' style='background-image: url("/images/portfolio/coveiot.svg")'></a>
+  <div class='info-item'>
+    <h4>CoveIoT</h4>
+    <h5>Lets branded mechanical movement watches go digital</h5>
+    <p>CoveIoT is an end-to-end smart IoT wearables platform allowing brands to launch a range of smart products.</p>
+    <p>The company was founded in 2014 by highly experienced members who together have 30+ years of experience working with Nokia, with deep hardware, OS and consumer service expertise, and now has expanded to multiple locations including Singapore, Geneva, Bangalore and Shenzhen.</p>
   </div>
 </div>
 <div class='info-group'>
@@ -41,5 +41,22 @@ permalink: /portfolio/
     <h5>On-demand home care</h5>
     <p>Homage is a complete solution that combines the best care professionals with smart technology to manage and provide on-demand home caregiving to seniors, allowing them to age at home with grace, control and dignity.</p>
     <p>Lily Phang and Gillian Tee founded Homage and SeedPlus co-led their seed investment.</p>
+  </div>
+</div>
+<div class='info-group'>
+  <a href='https://www.moglix.com/' class='bio-image' style='background-image: url("/images/portfolio/moglix.svg")'></a>
+  <div class='info-item'>
+    <h4>Moglix</h4>
+    <h5>SaaS-enabled marketplace for industrial goods</h5>
+    <p>Headed by Rahul Garg, who left his job at Google to start the Alibaba of south and south-east Asia, Moglix is a growing powerhouse in industrial MRO goods.</p>
+    <p>Since raising seed capital from SeedPlus and Accel, Moglix has closed both the A and B round through the SeedPlus network within 18 months.</p>
+  </div>
+</div>
+<div class='info-group'>
+  <a href='https://www.qopper.com/' class='bio-image' style='background-image: url("/images/portfolio/qopper.svg")'></a>
+  <div class='info-item'>
+    <h4>Qopper</h4>
+    <h5>Incident management for IoT/enterprise hardware devices</h5>
+    <p>Via an integrated platform, Silicon Valley-based Qopper is intending to create a digital twin of deployed devices in the field where each product component for each SKU is represented digitally in a custom designed, extensible database structure. This intends to simplify the development and operation of micro-services amidst the proliferation of connected devices and ecosystem.</p>
   </div>
 </div>
