--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -44,6 +44,15 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='http://www.kyklo.co/' class='bio-image' style='background-image: url("/images/portfolio/kyklo.svg")'></a>
+  <div class='info-item'>
+    <h4>Kyklo</h4>
+    <h5>Brings electromechanical distributors online</h5>
+    <p>Kyklo can bring up fully customizable online storefronts in 48h for manufacturers and distributors in the complex electromechanicals industry, leapfrogging them into online merchants with market-leading merchandising.</p>
+    <p>Headquartered in Thailand, Kyklo helps distributors and manufacturers globally.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='https://www.moglix.com/' class='bio-image' style='background-image: url("/images/portfolio/moglix.svg")'></a>
   <div class='info-item'>
     <h4>Moglix</h4>
