--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -17,6 +17,15 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='https://cardup.co/' class='bio-image' style='background-image: url("/images/portfolio/cardup.svg")'></a>
+  <div class='info-item'>
+    <h4>CardUp</h4>
+    <h5>Online card payments platform for cash management</h5>
+    <p>CardUp enables any payment made by bank transfer to be shifted to a credit card, regardless of whether the recipients accept credit cards. Both businesses and consumers gain instant access to interest-free credit of up to 55 days, improve their cash flow and earn reward points on big payments such as payroll, supplier invoices, rent and taxes, while digitising processes at the same time.</p>
+    <p>CardUp accepts all major credit cards and partners with leading institutions including United Overseas Bank, Citibank, Bank of China and Mastercard.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='http://coveiot.com/' class='bio-image' style='background-image: url("/images/portfolio/coveiot.svg")'></a>
   <div class='info-item'>
     <h4>CoveIoT</h4>
