Add ZPX to portfolio

--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -77,3 +77,11 @@ permalink: /portfolio/
     <p>Via an integrated platform, Silicon Valley-based Qopper is intending to create a digital twin of deployed devices in the field where each product component for each SKU is represented digitally in a custom designed, extensible database structure. This intends to simplify the development and operation of micro-services amidst the proliferation of connected devices and ecosystem.</p>
   </div>
 </div>
+<div class='info-group'>
+  <a href='https://zenprivex.com/' class='bio-image' style='background-image: url("/images/portfolio/zpx.png")'></a>
+  <div class='info-item'>
+    <h4>ZPX</h4>
+    <h5>Operator of next-generation blockchain assets</h5>
+    <p>Singapore-based ZPX is launching a series of tokens starting with 108 Token, a cryptocurrency index token built on top of the Ethereum blockchain, as well as building a relayer on top of the 0x protocol to facilitate the permissionless exchange of such ERC-20 tokens without custody risk. The firm’s tech platform initiatives are supported by a dedicated private markets and cryptocurrency analytics division.</p>
+  </div>
+</div>
