--- a/03_team.html
+++ b/03_team.html
@@ -15,7 +15,7 @@ permalink: /team/
     <h5>Partner</h5>
     <p>Michael has helmed technology-led expansions across the region from HOOQ (SingTel), Spuul, Yahoo! and BEA Systems (later acquired by Oracle). Michael is a WebLogic alumnus who currently calls Singapore home and is excited to be a part of the startup ecosystem in Southeast Asia.</p>
     <p>As Chief Technology Officer at HOOQ he was key in driving product and technology decisions that powered the premium online video content service to customers across Asia. At Yahoo!, Michael served as Director of Global Tech Initiatives. He managed the Asian developer network and oversaw the acquisitions of start-ups and partnerships with companies across Southeast Asia. Michael also spearheaded the acquisition of Koprol which formed the foundation of Yahoo!’s Indonesian engineering site.</p>
-    <p>A 44-year-old native from the Bay area with a degree in Computer Science from Sierra College in California, USA, Michael has found his home in East Asia: He has worked in Singapore, Hong Kong and Thailand, and been actively involved in the Asian start-up community over the past ten years.</p>
+    <p>A native from the Bay area with a degree in Computer Science from Sierra College in California, USA, Michael has found his home in East Asia: He has worked in Singapore, Hong Kong and Thailand, and been actively involved in the Asian start-up community over the past ten years.</p>
     <div class='bio-contact'>
       <a href="https://twitter.com/dreampipe" class='outbound'>{% include icon-twitter.svg %}</a>
       <a href="https://www.linkedin.com/in/dreampipe" class='outbound'>{% include icon-linkedin.svg %}</a>
@@ -43,7 +43,7 @@ permalink: /team/
     <h5>Operating Partner</h5>
     <p>Tiang started and launched Evernote’s operations in Singapore spearheading market development and business growth in Southeast Asia, Australia and New Zealand.</p>
     <p>Prior to launching Evernote, he served as VP of Product at MoVend, a Singtel Innov8 funded startup focused on mobile application development, content distribution and app monetization. Overseeing developer relations, feature planning and product marketing, Tiang identified key publishing and payment partners for the MoVend commerce platform’s growth.</p>
-    <p>With a Bachelor’s in Mechanical Engineering from the renowned National University of Singapore (NUS), he started his career as a medical device engineer designing and implementing manufacturing processes for lean production of cardiovascular stents and catheters in Second Source Medial, a medical device contract manufacturer in San Jose, California and brings this keen understanding of product development to your team.</p>
+    <p>With a Bachelor’s in Mechanical Engineering from  National University of Singapore (NUS), he started his career as a medical device engineer designing and implementing manufacturing processes for lean production of cardiovascular stents and catheters in Second Source Medial, a medical device contract manufacturer in San Jose, California and brings this keen understanding of product development to your team.</p>
     <div class='bio-contact'>
       <a href="https://twitter.com/tianglim" class='outbound'>{% include icon-twitter.svg %}</a>
       <a href="https://www.linkedin.com/in/tianglimfoo" class='outbound'>{% include icon-linkedin.svg %}</a>
