Soften geographical focus

--- a/01_about.html
+++ b/01_about.html
@@ -35,6 +35,6 @@ redirect_from: /about-us/
   </div>
   <div class='info-item'>
     <h4>Do you only invest in Singapore?</h4>
-    <p>We really prefer companies looking beyond Singapore, eyeing the rest of the world. However, your core team needs to be in Singapore so we can most efficiently work together, and your company must be incorporated in Singapore.</p>
+    <p>We really like companies looking beyond Singapore, eyeing the rest of the world. However, your core team needs to be in the Southeast Asia region so we can most efficiently work together and we prefer your company to be incorporated in Singapore.</p>
   </div>
 </div>
