--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -70,6 +70,15 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='https://www.travelstop.com/' class='bio-image' style='background-image: url("/images/portfolio/travelstop.svg")'></a>
+  <div class='info-item'>
+    <h4>Travelstop</h4>
+    <h5>A modern solution for business travel</h5>
+    <p>Travelstop is a revolutionary platform aimed at modernising and simplifying business travel. Travelstop makes it super easy to manage your business trips, automate your expense reporting, and provide meaningful insights to business owners.</p>
+    <p>Headquartered in Singapore, Travelstop is founded by a team who bring a wealth of experience from companies including Yahoo!, Expedia and HomeAway.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='https://www.qopper.com/' class='bio-image' style='background-image: url("/images/portfolio/qopper.svg")'></a>
   <div class='info-item'>
     <h4>Qopper</h4>
