Add Olasso to portfolio

--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -70,6 +70,14 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='https://olasso.com/' class='bio-image' style='background-image: url("/images/portfolio/olasso.svg")'></a>
+  <div class='info-item'>
+    <h4>Olasso</h4>
+    <h5>Innovative delivery & return solutions across Asia</h5>
+    <p>Olasso is a logistics technology platform that gives retailers access to innovative delivery & return solutions across Asia with one integration. Olasso’s platform integrates with Pick Up and Drop Off (“PUDO”) networks, ride-sharing technology companies as well as traditional carriers, redefining post-purchase experiences in ecommerce.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='https://www.travelstop.com/' class='bio-image' style='background-image: url("/images/portfolio/travelstop.svg")'></a>
   <div class='info-item'>
     <h4>Travelstop</h4>
