--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -35,6 +35,14 @@ permalink: /portfolio/
   </div>
 </div>
 <div class='info-group'>
+  <a href='https://engagerocket.co/' class='bio-image' style='background-image: url("/images/portfolio/engagerocket.svg")'></a>
+  <div class='info-item'>
+    <h4>EngageRocket</h4>
+    <h5>Great workplaces with people analytics</h5>
+    <p>EngageRocket is a SaaS platform that helps leaders and organisations make better people decisions using real-time data. The company automates employee feedback and analytics to deliver management insight that improves employee experience and performance.</p>
+  </div>
+</div>
+<div class='info-group'>
   <a href='https://evie.ai/' class='bio-image' style='background-image: url("/images/portfolio/evie.svg")'></a>
   <div class='info-item'>
     <h4>Evie</h4>
