Move Sessions to Calendar and redesign
Move to box-sizing
Remove headers with blue line
Menu bar has no underlines
Subtitle elements rather than header elements
Embrace gray knockout headers as a level below blue

--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -11,16 +11,16 @@ permalink: /portfolio/
 <div class='info-group'>
   <a href='https://appknox.com/' class='bio-image' style='background-image: url("/images/portfolio/appknox.svg")'></a>
   <div class='info-item'>
-    <h4>Appknox</h4>
-    <h5>Mobile app security as a service</h5>
+    <h3>Appknox</h3><br/>
+    <span class='subtitle'>Mobile app security as a service</span>
     <p>Appknox is a mobile app security solution that uses the combined power of automation and manual testing to help businesses and developers detect and resolve security issues without sharing any source code.  Appknox performs over 120 inspections using a set of real devices mirrored onto the web that users interact with as inspections run in the background. A detailed actionable report helps developers fix security issues easily even without having any security knowledge.</p>
   </div>
 </div>
 <div class='info-group'>
   <a href='https://cardup.co/' class='bio-image' style='background-image: url("/images/portfolio/cardup.svg")'></a>
   <div class='info-item'>
-    <h4>CardUp</h4>
-    <h5>Online card payments platform for cash management</h5>
+    <h3>CardUp</h3><br/>
+    <span class='subtitle'>Online card payments platform for cash management</span>
     <p>CardUp enables any payment made by bank transfer to be shifted to a credit card, regardless of whether the recipients accept credit cards. Both businesses and consumers gain instant access to interest-free credit of up to 55 days, improve their cash flow and earn reward points on big payments such as payroll, supplier invoices, rent and taxes, while digitising processes at the same time.</p>
     <p>CardUp accepts all major credit cards and partners with leading institutions including United Overseas Bank, Citibank, Bank of China and Mastercard.</p>
   </div>
@@ -28,8 +28,8 @@ permalink: /portfolio/
 <div class='info-group'>
   <a href='http://coveiot.com/' class='bio-image' style='background-image: url("/images/portfolio/coveiot.svg")'></a>
   <div class='info-item'>
-    <h4>CoveIoT</h4>
-    <h5>Lets branded mechanical movement watches go digital</h5>
+    <h3>CoveIoT</h3><br/>
+    <span class='subtitle'>Lets branded mechanical movement watches go digital</span>
     <p>CoveIoT is an end-to-end smart IoT wearables platform allowing brands to launch a range of smart products.</p>
     <p>The company was founded in 2014 by highly experienced members who together have 30+ years of experience working with Nokia, with deep hardware, OS and consumer service expertise, and now has expanded to multiple locations including Singapore, Geneva, Bangalore and Shenzhen.</p>
   </div>
@@ -37,16 +37,16 @@ permalink: /portfolio/
 <div class='info-group'>
   <a href='https://engagerocket.co/' class='bio-image' style='background-image: url("/images/portfolio/engagerocket.svg")'></a>
   <div class='info-item'>
-    <h4>EngageRocket</h4>
-    <h5>Great workplaces with people analytics</h5>
+    <h3>EngageRocket</h3><br/>
+    <span class='subtitle'>Great workplaces with people analytics</span>
     <p>EngageRocket is a SaaS platform that helps leaders and organisations make better people decisions using real-time data. The company automates employee feedback and analytics to deliver management insight that improves employee experience and performance.</p>
   </div>
 </div>
 <div class='info-group'>
   <a href='https://evie.ai/' class='bio-image' style='background-image: url("/images/portfolio/evie.svg")'></a>
   <div class='info-item'>
-    <h4>Evie</h4>
-    <h5>The personal assistant for the 99%</h5>
+    <h3>Evie</h3><br/>
+    <span class='subtitle'>The personal assistant for the 99%</span>
     <p>Evie is an artificially intelligent personal assistant that automagically schedules meetings. Just CC Evie and she will manage all the back and forth negotiations, leaving you time to focus on the work that really matters.</p>
     <p>Backed by SeedPlus, Evie has scheduled tens of thousands of meetings and is frequently mistaken for an actual human assistant.</p>
   </div>
@@ -54,16 +54,16 @@ permalink: /portfolio/
 <div class='info-group'>
   <a href='https://www.homage.sg/' class='bio-image' style='background-image: url("/images/portfolio/homage.svg")'></a>
   <div class='info-item'>
-    <h4>Homage</h4>
-    <h5>On-demand home care</h5>
+    <h3>Homage</h3><br/>
+    <span class='subtitle'>On-demand home care</span>
     <p>Homage is a complete solution that combines the best care professionals with smart technology to manage and provide on-demand home caregiving to seniors, allowing them to age at home with grace, control and dignity.</p>
   </div>
 </div>
 <div class='info-group'>
   <a href='http://www.kyklo.co/' class='bio-image' style='background-image: url("/images/portfolio/kyklo.svg")'></a>
   <div class='info-item'>
-    <h4>Kyklo</h4>
-    <h5>Brings electromechanical distributors online</h5>
+    <h3>Kyklo</h3><br/>
+    <span class='subtitle'>Brings electromechanical distributors online</span>
     <p>Kyklo can bring up fully customizable online storefronts in 48h for manufacturers and distributors in the complex electromechanicals industry, leapfrogging them into online merchants with market-leading merchandising.</p>
     <p>Headquartered in Thailand, Kyklo helps distributors and manufacturers globally.</p>
   </div>
@@ -71,8 +71,8 @@ permalink: /portfolio/
 <div class='info-group'>
   <a href='https://www.moglix.com/' class='bio-image' style='background-image: url("/images/portfolio/moglix.svg")'></a>
   <div class='info-item'>
-    <h4>Moglix</h4>
-    <h5>SaaS-enabled marketplace for industrial goods</h5>
+    <h3>Moglix</h3><br/>
+    <span class='subtitle'>SaaS-enabled marketplace for industrial goods</span>
     <p>Headed by Rahul Garg, who left his job at Google to start the Alibaba of south and south-east Asia, Moglix is a growing powerhouse in industrial MRO goods.</p>
     <p>Since raising seed capital from SeedPlus and Accel, Moglix has closed both the A and B round through the SeedPlus network within 18 months.</p>
   </div>
@@ -80,16 +80,16 @@ permalink: /portfolio/
 <div class='info-group'>
   <a href='https://olasso.com/' class='bio-image' style='background-image: url("/images/portfolio/olasso.svg")'></a>
   <div class='info-item'>
-    <h4>Olasso</h4>
-    <h5>Innovative delivery & return solutions across Asia</h5>
+    <h3>Olasso</h3><br/>
+    <span class='subtitle'>Innovative delivery & return solutions across Asia</span>
     <p>Olasso is a logistics technology platform that gives retailers access to innovative delivery & return solutions across Asia with one integration. Olasso’s platform integrates with Pick Up and Drop Off (“PUDO”) networks, ride-sharing technology companies as well as traditional carriers, redefining post-purchase experiences in ecommerce.</p>
   </div>
 </div>
 <div class='info-group'>
   <a href='https://www.travelstop.com/' class='bio-image' style='background-image: url("/images/portfolio/travelstop.svg")'></a>
   <div class='info-item'>
-    <h4>Travelstop</h4>
-    <h5>A modern solution for business travel</h5>
+    <h3>Travelstop</h3><br/>
+    <span class='subtitle'>A modern solution for business travel</span>
     <p>Travelstop is a revolutionary platform aimed at modernising and simplifying business travel. Travelstop makes it super easy to manage your business trips, automate your expense reporting, and provide meaningful insights to business owners.</p>
     <p>Headquartered in Singapore, Travelstop is founded by a team who bring a wealth of experience from companies including Yahoo!, Expedia and HomeAway.</p>
   </div>
@@ -97,16 +97,16 @@ permalink: /portfolio/
 <div class='info-group'>
   <a href='https://www.qopper.com/' class='bio-image' style='background-image: url("/images/portfolio/qopper.svg")'></a>
   <div class='info-item'>
-    <h4>Qopper</h4>
-    <h5>Incident management for IoT/enterprise hardware devices</h5>
+    <h3>Qopper</h3><br/>
+    <span class='subtitle'>Incident management for IoT/enterprise hardware devices</span>
     <p>Via an integrated platform, Silicon Valley-based Qopper is intending to create a digital twin of deployed devices in the field where each product component for each SKU is represented digitally in a custom designed, extensible database structure. This intends to simplify the development and operation of micro-services amidst the proliferation of connected devices and ecosystem.</p>
   </div>
 </div>
 <div class='info-group'>
   <a href='https://zenprivex.com/' class='bio-image' style='background-image: url("/images/portfolio/zpx.png")'></a>
   <div class='info-item'>
-    <h4>ZPX</h4>
-    <h5>Operator of next-generation blockchain assets</h5>
+    <h3>ZPX</h3><br/>
+    <span class='subtitle'>Operator of next-generation blockchain assets</span>
     <p>Singapore-based ZPX is launching a series of tokens starting with 108 Token, a cryptocurrency index token built on top of the Ethereum blockchain, as well as building a relayer on top of the 0x protocol to facilitate the permissionless exchange of such ERC-20 tokens without custody risk. The firm’s tech platform initiatives are supported by a dedicated private markets and cryptocurrency analytics division.</p>
   </div>
 </div>
