--- a/05_contact.html
+++ b/05_contact.html
@@ -50,10 +50,10 @@ async defer></script>
 
 <div class='contact contact-address'>
   <h2>Find us.</h2>
-  <h3><a href='http://maps.google.com/?q=1.298208,103.787358'><!-- geo: URIs would be awesome if they were supported everywhere -->
+  <span><a href='http://maps.google.com/?q=1.298208,103.787358'><!-- geo: URIs would be awesome if they were supported everywhere -->
     SeedPlus Singapore Pte Ltd<br />
     Blk 79 Ayer Rajah Crescent<br />
     #04-09<br />
     Singapore 139955
-  </a></h3>
+  </a></span>
 </div>
