--- a/03_calendar.html
+++ b/03_calendar.html
@@ -1,15 +1,21 @@
 ---
 layout: default
-title: Sessions.
-permalink: /sessions/
+title: Calendar.
+permalink: /calendar/
+redirect-from: /sessions/
 excerpt: SeedPlus Sessions are selective and focused talks on topics founders care about.
 ---
 
 <div class='page-header'>
-  <h1>Sessions.</h1>
+  <h1>Calendar.</h1>
 </div>
 
-<p>SeedPlus Sessions are selective and focused talks on topics founders care about. Certain Sessions are demand-limited (marked with a &#x2606;&#xfe0e;) - <a href='mailto:hello@seedplus.com' class='outbound'>get in touch</a> and we'll help you get access.</p>
+<div class='info-group'>
+  <div class='info-item'>
+    <h3>Sessions.</h3>
+    <p>SeedPlus Sessions are selective and focused talks on topics founders care about. Certain Sessions are demand-limited (marked with a &#x2606;&#xfe0e;) - <a href='mailto:hello@seedplus.com' class='outbound'>get in touch</a> and we'll help you get access.</p>
+  </div>
+</div>
 
 {% assign sessions = site.sessions | sort: 'date' | reverse %}
 {% for session in sessions %}
@@ -18,8 +24,8 @@ excerpt: SeedPlus Sessions are selective and focused talks on topics founders ca
     <h2></h2>
   </div>
   <div class='info-item'>
-    <h4>{{ session.title }}: {{ session.date | date: "%A %b %d" }}</h4>
-    <h5>{{ site.data.sessions.sections | where: 'tag', session.tag | first | map: 'label' }} {% if session.exclusive %}&#x2606;&#xfe0e;{% endif %}</h5>
+    <h4>{{ session.title }}</h4>
+    <span class='subtitle'><span class='tag'>Session</span><span class='tag'>{{ site.data.sessions.sections | where: 'tag', session.tag | first | map: 'label' }}</span>  {{ session.date | date: "%A %b %d %Y" }} {% if session.exclusive %}&#x2606;&#xfe0e;{% endif %}</span>
     {{ session.output }}
   </div>
 </div>
@@ -41,7 +47,7 @@ for (var j = 0; j < sessions.length; j++) {
   var session = sessions[j];
   var sessionInPast = parseInt(session.getAttribute('js-session-date')) < now - grace_period;
   if (sessionInPast) {
-    session.getElementsByTagName('h2')[0].innerText = 'Past.';
+    session.getElementsByTagName('h2')[0].innerText = 'Archive.';
     break;
   }
 }
