Correct misspelling of redirect_from

--- a/03_calendar.html
+++ b/03_calendar.html
@@ -2,7 +2,7 @@
 layout: default
 title: Calendar.
 permalink: /calendar/
-redirect-from: /sessions/
+redirect_from: /sessions/
 excerpt: SeedPlus Sessions are selective and focused talks on topics founders care about.
 ---
 
