--- a/03_calendar.html
+++ b/03_calendar.html
@@ -19,9 +19,13 @@ excerpt: SeedPlus Sessions are selective and focused talks on topics founders ca
     <h3>Clips.</h3>
     <p>When SeedPlus, our portfolio, or our team members are in the news we keep a small memento here.</p>
   </div>
+  <div class='info-item'>
+    <h3>Notes.</h3>
+    <p>Quick thoughts, long missives, and our other hosted content including announcements. May or may not represent the "house view".</p>
+  </div>
 </div>
 
-{% assign events = site.sessions | concat: site.clips | sort: 'date' | reverse %}
+{% assign events = site.sessions | concat: site.clips | concat: site.notes | sort: 'date' | reverse %}
 {% for event in events %}
 <div class='info-group js-session' js-session-date='{{ event.date | date: "%s000" }}'><!-- How to multiply by 1000 without parsing a number -_- -->
   <div class='info-sidebar'>
@@ -31,17 +35,28 @@ excerpt: SeedPlus Sessions are selective and focused talks on topics founders ca
     {% assign session = event %}
     <div class='info-item'>
       <h4>{{ session.title }}</h4>
-      <span class='subtitle'><span class='tag'>Session</span><span class='tag'>{{ site.data.calendar.tags | where: 'tag', session.tag | first | map: 'label' }}</span>  {{ session.date | date: "%A %b %d %Y" }} {% if session.exclusive %}&#x2606;&#xfe0e;{% endif %}</span>
+      <span class='subtitle'><span class='tag'>Session.</span><span class='tag'>{{ site.data.calendar.tags | where: 'tag', session.tag | first | map: 'label' }}.</span>  {{ session.date | date: "%A %b %d %Y" }} {% if session.exclusive %}&#x2606;&#xfe0e;{% endif %}</span>
       {{ session.output }}
     </div>
   {% elsif event.collection == 'clips' %}
     {% assign clip = event %}
     <div class='info-item'>
       <h4><a href='{{ clip.link }}' class='outbound'>{{ clip.title }}</a></h4>
-      <span class='subtitle'><span class='tag'>Clip</span>
-      {% if clip.tag %}<span class='tag'>{{ site.data.events.tags | where: 'tag', session.tag | first | map: 'label' }}</span> {% endif %}
+      <span class='subtitle'><span class='tag'>Clip.</span>
+      {% if clip.tag %}<span class='tag'>{{ site.data.calendar.tags | where: 'tag', clip.tag | first | map: 'label' }}.</span> {% endif %}
       {{ clip.date | date: "%A %b %d %Y" }} {% if clip.outlet %} from {% if clip.link %}<a href='{{ clip.link }}' class='outbound'>{{ clip.outlet }}</a>{% else %} {{ clip.outlet }} {% endif %} {% endif %}</span>
       {{ clip.output }}
+    </div>
+  {% elsif event.collection == 'notes' %}
+    {% assign note = event %}
+    <div class='info-item'>
+      <h4><a href='{{ note.url }}' class='outbound'>{{ note.title }}</a></h4>
+      <span class='subtitle'><span class='tag'>Note.</span>
+      {% if note.tag %}<span class='tag'>{{ site.data.calendar.tags | where: 'tag', note.tag | first | map: 'label' }}.</span> {% endif %}
+      {{ note.date | date: "%A %b %d %Y" }} {% if note.author %} by {{ site.data.calendar.authors | where: 'tag', note.author | first | map: 'label' }}{% endif %}</span>
+      {{ note.excerpt }}
+
+      <p><a href='{{ note.url }}'>Read the full note</a></p>
     </div>
   {% endif %}
 </div>
